modify padding for stats to display correctly on small mobile sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ body {
 .card__main .stats {
   height: 5.625rem;
   border-top: 1px solid #e6e6e6;
-  padding: 1.6875rem 2.5rem;
+  padding: 1.6875rem 2rem;
   text-align: center;
 }
 
